<resources>
    <string name="app_name">SOLPL</string>
    <string name="email">Email</string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="sign">Google Login</string>
    <string name="member">회원가입</string>
    <string name="find_id">ID 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="nav_home">홈</string>
    <string name="nav_calendar">일정</string>
    <string name="nav_chat">채팅</string>
    <string name="nav_map">지도</string>
    <string name="nav_mypage">마이페이지</string>

    <string name="add_post">Add Post</string>
    <string name="title">SOLPL</string>
    <string name="feed">피드</string>
    <string name="realtime_feed">실시간 피드</string>
    <string name="posting">게시글 올리기</string>
    <string name="profile_edit"><u>프로필 편집</u></string>
    <string name="price">%1$s원</string>

    <string name="success_login">구글 로그인 성공</string>
    <string name="failed_login">구글 로그인 실패</string>
    <string name="success_logout">로그아웃 되었습니다</string>
    <string name="status_login">이미 로그인 되어있습니다</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="location">주소</string>
    <string name="sex">성별</string>
    <string name="join">Join</string>
    <string name="guide">가이드 채팅</string>
    <string name="together">함께 여행하기</string>
    <string name="category_location">내 주변 채팅</string>
    <string name="create_room">방 만들기</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">message</string>
    <string name="text_a_message">text a message</string>

    <string name="select">Select item</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="app_label">SOLPL</string>
    <string name="search_hint">검색어를 입력하세요...</string>
</resources>