<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/edit_cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="취소"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="프로필 편집"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/edit_success"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="완료"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#d9d9d9" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_edit_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/title_logo" />

    <Button
        android:id="@+id/change_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:textColor="@color/black"
        android:text="사진 변경" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="이름"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="이메일"
                android:enabled="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="전화번호"
                android:enabled="false"
                android:focusable="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profile_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="주소"
                android:enabled="false"
                android:focusable="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/sex"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:enabled="false"
                    android:checked="true"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:text="남성"
                    android:textSize="20sp" />

                <RadioButton
                    android:enabled="false"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:text="여성"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>